refactor: service에서 사용하던 builder 패턴 dto의 from으로 리팩토링